
Version 0.2.0 (in development)
=============

New features/fixes:
- autoclear option msgQueue added
- previous machine variable added
- Machine::trigger() method
- Tiny machines
- Att_* tiny machines for all bundled machines except Atm_teensywave
- msgPeek() now returns number of messages (for data sending)
- obj.onSwitch( atm_serial_debug::onSwitch ) for all bundled machines!
- Atm_timer: added interval_seconds(), now supports timers up to 137 years
- Atm_command fixes: either \r or \n works for EOL, matches whole commands only
- Atm_led: blink cycle now includes the trailing pause
- Added sleep() method to sleep/wake up machines
- Atm_led: repeat(0) makes led not blink
- Atm_led: added chain() method
- Automatic cycle() added when machine is in an invalid state on a trigger() call
- Added Atm_wait: Simple waiting state machine
- TinyMachine no longer supports microsecond timers
- Machines have the sleep bit set on declaration which is cleared on begin() call
- Factory::cycle now takes a time argument (ms) after which it will stop running (0 default: after 1 cycle)
- Machine::cycle now takes a time argument (ms) after which it will stop running (0 default: after 1 cycle)
- Added Factory::msgWrite() with class and wildcard support (replaces msgSend*)
- Added Factory::trigger() with class and wildcard support

Breaking changes:
- trigger machine variable changed to last_trigger
- dropped toggle, runtime_*, msgMap, runtime_millis(), runtime_micros()
- ON_ENTER action is now fired after each state( new_state ) call
- machine.msgPeek() returns number of messages instead of just 0 or 1
- Dropped numeric version of onSwitch()
- Atm_timer added extra 'int cnt' argument to callback
- atm_timer_micros() & atm_timer_millis(): dropped begin() added 'this' argument to expired()
- Dropped Factory::msgSend( "LED1", msg ) replaced by msgWrite( "LED1", msg );
- Dropped Factory::msgSendClass( "LED", msg ) replaced by msgWrite( ".LED", msg );
