@@ -12,9 +12,6 @@ class Atm_fade : public Machine {
 		enum { IDLE, ON, START, STARTU, UP, STARTD, DOWN, REPEAT };
 		enum { EVT_CNT_FADE, EVT_TM_FADE, EVT_TM_ON, EVT_TM_OFF, EVT_CNT_RPT, EVT_ON, EVT_OFF, EVT_BLINK, ELSE };
         enum { ACT_REPEAT, ACT_OFF, ACT_ON, ACT_UP, ACT_DOWN, ACT_START };
-        enum { MSG_ON, MSG_OFF, MSG_BLINK, MSG_END };
-		
-        atm_msg_t messages[MSG_END];
     
 		static const uint8_t SLOPE_SIZE = 32;
 		uint8_t slope[SLOPE_SIZE] = { 	
