@@ -22,7 +22,6 @@ Atm_teensywave & Atm_teensywave::begin( int attached_pin, int steps, int delay )
       /* SQOFF    */   ACT_SQOFF,        -1,      -1,          -1,       SQON,   START_SN,    -1,
       };
       Machine::begin( state_table, ELSE );
-      Machine::msgQueue( messages, MSG_END );
       pin = attached_pin; 
       _steps = steps;
       _delay = delay;
@@ -44,8 +43,6 @@ int Atm_teensywave::event( int id )
       return timer.expired( this );        
     case EVT_COUNTER :
       return phase.expired();        
-    case EVT_TOGGLE :
-      return msgRead( MSG_TOGGLE );
    }
    return 0;
 }
