@@ -18,8 +18,6 @@ class Atm_teensywave: public Machine {
     enum { IDLE, START_SN, SINE, START_SW, SAW, START_SR, SAWR, START_TR, TRI, START_SQ, SQON, SQOFF };
     enum { EVT_COUNTER, EVT_TIMER, EVT_TOGGLE, ELSE };
     enum { ACT_IDLE, ACT_START, ACT_SINE, ACT_SAW, ACT_SAWR, ACT_STARTTR, ACT_TRI, ACT_STARTSQ, ACT_SQON, ACT_SQOFF };
-    enum { MSG_TOGGLE, MSG_END };
-    atm_msg_t messages[MSG_END];
 			
     Atm_teensywave & begin( int attached_pin, int steps, int delay );
     Atm_teensywave & onSwitch( swcb_sym_t switch_callback );
